# Simple-Chatbot

./: .gitignore  README.md  chatbot.py  openai_bot.py  pyproject.toml
api/: app.py  client.py
