[tool.poetry]
name = "gen-ai-project-1"
version = "0.0.1"
description = "Simple chatbot by using Langchain."
authors = ["Darshan  <darshan922000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-community = "^0.3.14"
streamlit = "^1.41.1"
langchain-ollama = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
